stylesheets/style.css
body {
	font-family: 'Open Sans';
	margin: 0;
	padding: 0;
	text-align: center;
	background-color: #4fbdb5;
	overflow: hidden;
	color: #fff;
}

.content {
	width: 100%;
	max-width: 1024px;
	overflow: hidden;
	margin: 0px auto;
	background-color:#ADEDE9; 
}

.topPanel {
	position: relative;
	width: 100%;
	overflow: hidden;
}

.topPanel IMG {
	position: relative;
	float: left;
	width: 15%;
	border-radius: 50%;
	margin: 0.5%;
}

h1, h2 {
	position: relative;
	float: left;
	margin: 0;
	margin-left: 2%;
	padding: 0;
}

H1 {
	font-weight: 600;
	font-size: 48px;
}

H2 {
	font-weight: 300;
	font-size: 24px;
}

.aboutMe {
	position: absolute;
	top: 100px;
	color: #fff;
	padding: 1%;
	padding-right: 20px;
	right: -705px;
	background-color:#F96876;
	margin: 0;
	border-radius: 10px;
}

ul li {
	display: inline-block;
	list-style-type: none;
}

.menu a, footer a {
	text-transform: uppercase;
	text-decoration: none;
	padding: .2em 1em;
	color: #fff;
	background-color: #f96876;
	border-radius: 5em;
	margin: 1em;
}

.interestGrid {
	position: relative;
	width: 100%;
	overflow: hidden;
	display: block;
}

.cell {
	position: relative;
	float: left;
	width: 28%;
	margin: 2%;
	background-color: #4fbdb5;
}

.cell IMG {
	position: relative;
	width: 100%;
	height: auto;
}

.title {
	margin: 2%;
	text-align: center;
	text-transform: uppercase;
	font-size: 24px;
	font-weight: 300;
}

.sectionHeader {
	position: relative;
	float: left;
	width: 100%;
	background-color: #4fbdb5;
	font-weight: 600;
	font-size: 4em;
	margin-top: .125em;
	margin-bottom: .125em;
}

footer {
	float: right;
	margin-right: 2%;
}

